Prevent division by 0, enable bksp, round decimals
This commit prevents the user from executing calculations that
divide a number by zero. Users can now click the backspace button to
delete a character from the display, and the calculator automatically
rounds decimal numbers with four or more digits beyond the decimal point
to four decimal places.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <button class="digit">0</button>
         </div>
         <div class="column">
-            <button id="backspace-btn">
-                <img class="icon" src="images/backspace-icon.png">
+            <button id="backspace-btn" class="backspace-btn">
+                <img class="backspace-btn icon" src="images/backspace-icon.png">
             </button>
             <button class="digit">8</button>
             <button class="digit">5</button>
@@ -48,7 +48,7 @@
                 <img class="divide icon icon-opr" src="images/divide-icon.png">
             </button>
             <button class="multiply operator">
-                <img src="images/multiply-icon.png" value="×" class="multiply icon-opr icon" style="width: 20px; height: 20px;">
+                <img src="images/multiply-icon.png" class="multiply icon-opr icon" style="width: 20px; height: 20px;">
             </button>
             <button class="minus operator">
                 <img class="minus icon-opr icon" src="images/minus-icon.png">
