Enable '.' button, prevent multiple decimal points
Users are now able to input decimal numbers in the calculator but are
prohibited from adding multiple decimal points to the same number.
Furthermore, a decimal point cannot be the first input and users cannot
add a decimal point after an operator.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <button class="digit">8</button>
             <button class="digit">5</button>
             <button class="digit">2</button>
-            <button id="decimal-point">
-                <img class="icon" src="images/dot-icon.png">
+            <button id="decimal-point" class="decimal-point">
+                <img class="decimal-point icon" src="images/dot-icon.png">
             </button>
         </div>
         <div class="column">
