Allow user to input operator with keyboard
This commit allow the user to enter an operator with the keyboard. The
square root button is disabled in this version.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </button>
         </div>
         <div class="column">
-            <button class="square-root operator">
+            <button class="square-root operator" disabled>
                 <img class="square-root icon icon-opr" src="images/square-root-icon.png">
             </button>
             <button class="digit">9</button>
